@@ -1,3 +1,6 @@
+2007-12-26 Reduce too-late use of matplotlib.use() to a warning
+           instead of an exception, for backwards compatibility - EF
+
 2007-12-25 Fix bug in errorbar, identified by Noriko Minakawa - EF
 
 2007-12-25 Changed masked array importing to work with the upcoming
